# demo-triangulation

./: Cargo.toml
api/: Cargo.toml
api/assets/: index.html
api/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
discord/: Cargo.toml
discord/src/: main.rs
src/: main.rs
