[package]
name = "demo-triangulation-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
demo-triangulation-core = { path = "../core" }
axum = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25", features = ["full"] }
tower-http = "0.3.5"
axum-extra = { version = "0.5.0", features = ["spa"] }
