[package]
name = "demo-triangulation-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
demo-triangulation-core = { path = "../core" }
serenity = { default-features = false, features = ["client", "framework", "standard_framework", "gateway", "model", "rustls_backend"], version = "0.11.5" }
tokio = { version = "1.25.0", features = ["full"] }
